<resources>
    <string name="app_name">Arena</string>
    <string name="title_profile">Mano profilis</string>
    <string name="title_favorites">Mėgstamiausi</string>
    <string name="title_cart">Mano krepšelis</string>
    <string name="title_orders">Mano užsakymai</string>
    <string name="title_discounts">Nuolaidos</string>
    <string name="cart">cart</string>
    <string name="content_description_cart">description_cart</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_full_name">Vardenis Pavardenis</string>
    <string name="settings">Nustatymai</string>
    <string name="close">X</string>
    <string name="product_description">Prekės aprašymas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Produkto pavadinimas</string>
    <string name="product_price">0</string>
    <string name="eur_symbol">€</string>
    <string name="number_of_products">0</string>
    <string name="decrease_quantity">Decrease food quantity</string>
    <string name="increase_quantity">Increase food quantity</string>
    <string name="food_image">This is an image of some food</string>
    <string name="favorite_food">favorite food</string>
    <string name="arena_name">Žalgirio arena</string>
    <string name="arena_name_options">Arena name arrow down settings</string>
    <string name="cart_image">cart image</string>
    <string name="search_bar_hint">Ką galėtume jums pasiūlyti?</string>
    <string name="my_cart">Mano krepšelis</string>
    <string name="checkout_details">UŽSAKYMO DETALĖS</string>
    <string name="viso_be_pvm">Viso be PVM</string>
    <string name="price_pvm">PVM 21%</string>
    <string name="price_without_pvm">0</string>
    <string name="price">0</string>
    <string name="viso">Viso</string>
    <string name="minus">-</string>
    <string name="x">x</string>
    <string name="card_name">Kortelės Pavadinimas</string>
    <string name="card_number">6556 5588 7588 5225</string>
    <string name="uzsakymo_detales">Užsakymo detalės</string>
    <string name="uzsakyti">Užsakyti</string>
    <string name="data">DATA:</string>
    <string name="suma">SUMA:</string>
    <string name="uzsakymo_patvirtinimas">Užsakymo patvirtinimas</string>
    <string name="date_number">06/02/2021</string>
    <string name="pristatymo_vieta">Pristatymo vieta</string>
    <string name="sektorius_nr">107</string>
    <string name="eile_nr">10</string>
    <string name="vieta_nr">4</string>
    <string name="sektorius">sektorius</string>
    <string name="eile">eilė</string>
    <string name="vieta">vieta</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="testi">Tęsti</string>
    <string name="kreditine_kortele">Kreditinė kortelė</string>
    <string name="debitine_kortele">Debitinė kortelė</string>
    <string name="paypal">PayPal</string>
    <string name="prideti_mokejimo_kortele">Pridėti mokėjimo kortelę</string>
    <string name="mokejimo_budas">Mokėjimo būdas</string>
    <string name="kontaktine_informacija">Kontaktinė informacija</string>
    <string name="vardas">Vardas</string>
    <string name="pavarde">Pavardė</string>
    <string name="kontaktinis_telefonas">Kontaktinis telefonas</string>
    <string name="telefon_start_hint">+370</string>
    <string name="keisti">Keisti</string>
    <string name="login">PRISIJUNGIMAS</string>
    <string name="email">Epaštas</string>
    <string name="password">Slaptažodis</string>
    <string name="prisijungti">Prisijungti</string>
    <string name="registruotis">Registruotis</string>
    <string name="pasirinkite_sektoriu">Pasirinkite sektorių</string>
    <string name="toliau">Toliau</string>
    <string name="Capital_sektorius">Sektorius</string>
    <string name="Capital_eile">Eilė</string>
    <string name="Capital_vieta">/ Vieta</string>
    <string name="vieta_sektorius">Pristatymo vieta / Sektorius</string>
    <string name="pasirinkite_vieta">Pasirinkite vietą</string>
    <string name="uzsakymo_kodas">#za12345</string>
    <string name="uzsakymo_statusas">Užsakymo statusas</string>
    <string name="uzsakymas_primtas">UŽSAKYMAS PRIMTAS</string>
    <string name="ruosiama">RUOŠIAMA</string>
    <string name="pakuojama">PAKUOJAMA</string>
    <string name="pakeliui">PAKELIUI</string>
    <string name="pristatyta">PRISTATYTA</string>
    <string name="j_s_u_sakymas_patvirtintas">Jūsų užsakymas patvirtintas</string>
    <string name="u_sakymas_bus_pristatytas">Užsakymas bus pristatytas į</string>
    <string name="u_sakymo_nr">Užsakymo Nr.</string>
    <string name="za12345">#za12345</string>
    <string name="steb_ti_u_sakymo_status">Stebėti užsakymo statusą</string>
    <string name="uzsaugoti">Užsaugoti</string>
    <string name="current_password">Dabartinis slaptažodis</string>
    <string name="favorites">Mėgstamiausi</string>
    <string name="offers">Nuolaidos</string>
    <string name="contacts">Kontaktai</string>
    <string name="arena_Telefon">+37046763216</string>
    <string name="arena_email">arena@gmail.com</string>
    <string name="naudojimo_taisykleslt">1. Norėdamas naudotis programėlės teikiamomis paslaugomis vartotojas turi būti susikūręs paskyrą ir\n
prie jos prisijungęs. Paskyros sukūrimui reikalingi duomenys yra asmens elektroninis paštas,\n
telefono numeris ir slaptažodis. Prisijungdamas vartotojas turi įvesti tik savo el. paštą ir slaptažodį.\n
2. Vartotojui prisijungus prie paskyros yra atidaromas veiksmų sąrašas, iš kurio vartotojas gali/\n
išsirinkti reikiamą. Pagrindiniame lange kairiajame kampe yra nukreipiantis ženklas į nustatymų\n
skiltį.\n
\ta. Nustatymų langas turi kelias skiltis. Nustatymų lango viršuje yra vieta vartotojo nuotraukai\n
ir vardui, pavardei. Žemiau, yra skiltys „Mano profilis“, „Mėgstamiausi“, „Mano krepšelis“,\n
„Mano užsakymai“, „Nuolaidos“. Nustatymų lango apačioje yra „D.U.K“ ir kontaktai,\n
kuriais vartotojas gali kreiptis, jei atsirado nesklandumų su programėle ar paslauga.\n
\tb. Prieš pasirinkdamas patiekalus užsisakymui, pagrindinio meniu lango viršuje, centre,\n
vartotojas turi pasirinkti buvimo vietą, į kurią užsakyti patiekalai turės būti pristatomi, pvz.\n
Žalgirio arena.\n
\tc. Pagrindiniame meniu lange matomos valgių pasirinkimo skiltys: „Akcijos“, „Naujienos“,\n
„Kategorijos“. „Akcijos“ skiltyje rodomi patiekalai su akcija, „Naujienos“ skiltyje rodomi\n
naujausi patiekalai, „Kategorijos“ skiltyje rodomos kategorijos pagal kurias lengviau rasti\n
norimą patiekalą, pvz. blynai, gėrimai, užkandžiai.\n
\td. Pagrindiniame meniu, lango apačioje, yra funkcija pakviesti draugą atsisiųsti ir\n
prisiregistruoti prie programėlės.\n
3. Pasirinkus ir paspaudus ant tam tikros kategorijos, atidaromas smulkesnis pasirinkimų sąrašas.\n
Vartotojas norėdamas išeiti iš smulkesnio pasirinkimų sąrašo ir grįžti į pagrindinį sąrašą turi\n
paspausti rodyklę „atgal“ lango viršutiniame kairiajame kampe.\n
4. Smulkesniajame pasirinkimų sąraše vartotojas gali rinktis norimus patiekalus ir jų kiekius\n
spausdamas pliuso arba minuso ženklą puslapio dešinėje. Tam, kad norimo patiekalo užsakymas\n
įvyktų greičiau yra funkcija „filtras“, kurio pagalba vartotojas gali sukonkretinti paiešką . Filtras\n
atidaromas paspaudus mygtuką smulkesniajame pasirinkimų sąrašo viršutiniame dešiniajame kampe.\n
5. Nukreipiamas į krepšelį vyksta paspaudus krepšelio ženklą pagrindinio meniu viršutiniame\n
dešiniajame kampe arba paspaudus „Mano krepšelis“ skiltį nustatymų lange. Krepšelyje įtrauktų\n
patiekalų kiekius galima padidinti ar sumažinti ir pašalinti nenorimus. Vartotojas norėdamas pirkti\n
pasirinktą krepšelį turi paspausti mygtuką „Tęsti“, kuris yra po „Viso“ sumos. Tuomet yra\n
atidaromas apmokėjimo langas.\n
6. Apmokėjimo lange vartotojas turi suvesti savo kontaktinę informaciją – vardą, pavardę ir telefono\n
numerį.\n
7. Po kontaktinių duomenų įvedimo kitame apmokėjimo lange svarbu pasirinkti pristatymo vietą (pvz.\n
Žalgirio arenos 107 sektoriaus 10 eilė, 4 vieta). Atsidariusiame naujame lange rodoma arena, kurioje\n
galima pasirinkti norimą sektorių, paspaudus toliau atsidaro vietos pasirinkimas, kur matomos\n
laisvos vietos.\n
8. Pasirinkus pristatymo vietą ir paspaudus mygtuką „Tęsti“, atsidaro naujas langas, kuriame galima\n
pasirinkti mokėjimo būdą. Tarp mokėjimo langų galima naviguoti, t.y. grįžti į krepšelio langą,\n
paspaudžiant „x“ ženklą.\n
9. Kai kontaktinė informacija įvedama reikia nurodyti, pridėti arba pasirinkti, kortelę, kuria bus\n
mokama už užsakymą.\n
10. Paskutinis užsakymo žingsnis – užsakymo patvirtinimas. Užsakymo patvirtinimo lange bus matomos\n
detalės, vaizduojančios krepšelį ir pristatymo vietą. Tam, kad užsakymas būtų patvirtintas vartotojas\n
turi spausti mygtuką „Užsakyti“, tuomet atsivers patvirtinimo langas, kuriame bus matoma\n
pristatymo vieta, užsakymo numeris ir t.t. Paspaudus mygtuką „Stebėti užsakymo statusą“ bus\n
rodomas statuso langas, kuriame vartotojas galės sekti patvirtinto užsakymo eigą.</string>
    <string name="filtras">Filtras</string>
    <string name="perkamiausios_prek_s">Perkamiausios prekės</string>
    <string name="pigiausios_vir_uje">Pigiausios viršuje</string>
    <string name="brangiausios_vir_uje">Brangiausios viršuje</string>
    <string name="gaminimo_laikas">Gaminimo laikas</string>
    <string name="geriausiai_vertintos">Geriausiai įvertintos</string>
    <string name="_15min">15min</string>
    <string name="ruo_iama">Ruošiama</string>
    <string name="pla_iau">Plačiau</string>
</resources>