<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/item_favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/title_favorites" />
        <item
            android:id="@+id/item_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/title_cart" />
        <item
            android:id="@+id/item_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/title_orders" />
        <item
            android:id="@+id/item_discounts"
            android:icon="@drawable/ic_discount"
            android:title="@string/title_discounts" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/item_information"
                android:title="Informacija"
                />
            <item
                android:id="@+id/item_contact"
                android:title="Kontaktai"
                />
        </menu>
    </item>

</menu>